[gd_scene load_steps=25 format=3 uid="uid://clacnpxi5q18m"]

[ext_resource type="PackedScene" uid="uid://bqalbxqvp523a" path="res://scene/bases/enemy_base/enemy_base.tscn" id="1_pln7n"]
[ext_resource type="Script" uid="uid://cnj0wdww03b7a" path="res://scene/enemies/lava/rotate_shooter/rotate_shooter.gd" id="2_12ov0"]
[ext_resource type="Texture2D" uid="uid://w64qf1l51pro" path="res://aaasets/death_medium/death1.png" id="2_fp6eo"]
[ext_resource type="PackedScene" uid="uid://e8elg6ssoy0f" path="res://scene/enemies/lava/enemy_lava_bullet/enemy_lava_bullet.tscn" id="3_8x2vo"]
[ext_resource type="Texture2D" uid="uid://cnmwmukt4r1ak" path="res://aaasets/death_medium/death2.png" id="3_12ov0"]
[ext_resource type="Texture2D" uid="uid://dh5yocgdi8fh1" path="res://aaasets/death_medium/death3.png" id="4_8x2vo"]
[ext_resource type="PackedScene" uid="uid://dprodurxendwn" path="res://scene/player_scenes/coins/coin_gold/coin_gold.tscn" id="4_43mx7"]
[ext_resource type="Texture2D" uid="uid://2dkpggj5qb5c" path="res://aaasets/death_medium/death4.png" id="5_43mx7"]
[ext_resource type="Texture2D" uid="uid://cewlqb3ru73vo" path="res://aaasets/death_medium/death5.png" id="6_ydn05"]
[ext_resource type="Texture2D" uid="uid://ld5i5ck53kw4" path="res://aaasets/death_medium/death6.png" id="7_tulg0"]
[ext_resource type="Texture2D" uid="uid://bjsvo5oiotnl" path="res://aaasets/death_medium/death7.png" id="8_i0hdw"]
[ext_resource type="Texture2D" uid="uid://bk4v45w5blolg" path="res://aaasets/death_medium/death8.png" id="9_xjnf6"]
[ext_resource type="Texture2D" uid="uid://dche0iwpqd83l" path="res://aaasets/death_medium/death9.png" id="10_yiu6l"]
[ext_resource type="Texture2D" uid="uid://7mqvjpn73a6b" path="res://aaasets/death_medium/death10.png" id="11_s7vxp"]
[ext_resource type="Texture2D" uid="uid://da1whvqxu6sn3" path="res://aaasets/death_medium/death11.png" id="12_vl60n"]
[ext_resource type="Texture2D" uid="uid://ccjgp3cmwrx3l" path="res://aaasets/death_medium/death12.png" id="13_6mk1r"]
[ext_resource type="Texture2D" uid="uid://dwky7kt6q1281" path="res://aaasets/death_medium/death13.png" id="14_8gybl"]
[ext_resource type="Texture2D" uid="uid://jtiohq3c21ni" path="res://aaasets/enemies/lava/rotate_shooter/rotate_shooter_fly1.png" id="15_cqarg"]
[ext_resource type="Texture2D" uid="uid://1r43qjhbnxah" path="res://aaasets/enemies/lava/rotate_shooter/rotate_shooter_fly2.png" id="16_gc061"]
[ext_resource type="Texture2D" uid="uid://la1rot8s446q" path="res://aaasets/enemies/lava/rotate_shooter/rotate_shooter_fly3.png" id="17_dmjyv"]
[ext_resource type="Texture2D" uid="uid://oqgyhfu4a2pj" path="res://aaasets/enemies/lava/rotate_shooter/rotate_shooter_fly4.png" id="18_fctqd"]
[ext_resource type="Texture2D" uid="uid://cgtxq4aoh2of3" path="res://aaasets/enemies/lava/rotate_shooter/rotate_shooter_fly5.png" id="19_x8e8x"]

[sub_resource type="SpriteFrames" id="SpriteFrames_288dg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fp6eo")
}, {
"duration": 1.0,
"texture": ExtResource("3_12ov0")
}, {
"duration": 1.0,
"texture": ExtResource("4_8x2vo")
}, {
"duration": 1.0,
"texture": ExtResource("5_43mx7")
}, {
"duration": 1.0,
"texture": ExtResource("6_ydn05")
}, {
"duration": 1.0,
"texture": ExtResource("7_tulg0")
}, {
"duration": 1.0,
"texture": ExtResource("8_i0hdw")
}, {
"duration": 1.0,
"texture": ExtResource("9_xjnf6")
}, {
"duration": 1.0,
"texture": ExtResource("10_yiu6l")
}, {
"duration": 1.0,
"texture": ExtResource("11_s7vxp")
}, {
"duration": 1.0,
"texture": ExtResource("12_vl60n")
}, {
"duration": 1.0,
"texture": ExtResource("13_6mk1r")
}, {
"duration": 1.0,
"texture": ExtResource("14_8gybl")
}],
"loop": true,
"name": &"death",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_cqarg")
}, {
"duration": 1.0,
"texture": ExtResource("16_gc061")
}, {
"duration": 1.0,
"texture": ExtResource("17_dmjyv")
}, {
"duration": 1.0,
"texture": ExtResource("18_fctqd")
}, {
"duration": 1.0,
"texture": ExtResource("19_x8e8x")
}],
"loop": true,
"name": &"fly",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dh72h"]
radius = 38.0
height = 142.0

[node name="RotateShooter" groups=["lava_enemies"] instance=ExtResource("1_pln7n")]
script = ExtResource("2_12ov0")
enemy_bullet_scene = ExtResource("3_8x2vo")
coin_scene = ExtResource("4_43mx7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="4"]
rotation = 1.5707964
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_288dg")
animation = &"fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="5"]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_dh72h")

[node name="Shot" type="Timer" parent="." index="6"]
wait_time = 4.0
autostart = true

[node name="SpawnPoint1" type="Marker2D" parent="." index="7"]
position = Vector2(70, -28)

[node name="SpawnPoint2" type="Marker2D" parent="." index="8"]
position = Vector2(70, 28)

[connection signal="timeout" from="Shot" to="." method="_on_shot_timeout"]
